Add chapter generator and improved position generation for youtube thumb

--- a/youtube.html
+++ b/youtube.html
@@ -32,8 +32,9 @@
 </head>
 <body>
   <span class="label">Datos del podcast:</span>
-  <input id="number" value="1" />
-  <input id="name" value="Nombre del Podcast" />
+  <input id="number" value="#1" />
+  <input id="name" value="Nombre del episodio" />
+  <input id="numbervpos" value="260" />
   <input type="button" onClick="draw()" value="set" />
   <hr/>
   <div class="canvas__container">
